--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Zhouyang.cn
-organization: Huawei, Inc.
-organization_url: https://www.huawei.com
+organization: Shenzhen, CN.
+organization_url: https://www.zhouyang.cn
 github_username: 5onion
 location: Shenzhen, China
 email: me@zhouyang.cn
